--- a/source/index.html
+++ b/source/index.html
@@ -2,11 +2,135 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, inital-scale=1.0">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
+    <header class="header">
+      <a href="index.html" class="header__logo">
+        <picture class="header__images">
+          <source srcset="img/logo-desktop.svg" media="(min-width: 1440px)" />
+          <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
+          <img src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w" sizes="" alt="Cat Energy - Функциональное питание для котов" width="33" height="38" class="header__logo">
+          <!--Я пока не до конца понимаю, как настроить sizes. Когда буду писать стили, сделаю размеры для десктопа и планшета, тогда уже буду настраивать-->
+        </picture>
+        <img src="img/logo-text.svg" alt="Cat Energy" class="header__logo-text">
+      </a>
+      <nav class="header__navigation navigation">
+        <button class="navigation__toggle">
+          <span class="visually-hidden">Открыть / Закрыть меню</span>
+        </button>
+        <ul class="navigation__list list-reset">
+          <li class="navigation__item">
+            <a href="index.html" class="navigation__link">Главная</a>
+          </li>
+          <li class="navigation__item">
+            <a href="catalog.html" class="navigation__link">Каталог продукции</a>
+          </li>
+          <li class="navigation__item">
+            <a href="form.html" class="navigation__link">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+    <main class="main">
+      <section class="greetings">
+        <h1 class="greetings__title">Функциональное питание для котов</h1>
+        <h2 class="greetings__subtitle">Занялся собой? Займись котом!</h2>
+        <img src="img/index-can-mobile.svg" alt="" width="280" height="270" class="greetings__banner">
+        <button class="greetings__button button">Подобрать программу</button>
+      </section>
 
+      <section class="for-what">
+        <ul class="for-what__list list-reset">
+          <li class="for-what__item">
+            <div class="for-what__cat for-what__cat--slim"></div>
+            <h3 class="for-what__title">Похудение</h3> <!--TODO Проверь пожалуйста, правильно ли поставил Х-->
+            <p class="for-what__text">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            </p>
+            <a href="#" class="for-what__link">Каталог slim</a>
+          </li>
+          <li class="for-what__item">
+            <div class="for-what__cat for-what__cat--fat"></div>
+            <h3 class="for-what__title">Набор массы</h3>
+            <p class="for-what__text">
+              Заработать авторитет среди дворовых котов и даже собак?
+              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a href="#" class="for-what__link">Каталог pro</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="work">
+        <h2 class="work__title">Как это работает</h2>
+        <ul class="work__list list-reset">
+          <li class="work__item">Функциональное питание содержит только полезные питательные вещества.</li>
+          <li class="work__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+          <li class="work__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
+          <li class="work__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+        </ul>
+      </section>
+
+      <section class="example">
+        <h2 class="example__title">Живой пример</h2>
+        <P class="example__subtitle">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+          Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </P>
+        <div class="example__box">
+          <div class="example__bold">5 кг</div>
+          <p class="example__thin">снижение веса</p>
+        </div>
+        <div class="example__box">
+          <div class="example__bold">60 дней</div>
+          <p class="example__thin">затрачено времени</p>
+        </div>
+        <P class="example__total">Затраты на питание: 15 000 РУБ. </P>
+        <img src="img/before-mobile.jpg" alt="Кот до диеты" width="280" height="232" class="example__img">
+        <div class="example__range">
+          <span class="example__span">Было</span>
+          <input type="range" class="example__input">
+          <span class="example__span">Стало</span>
+        </div>
+      </section>
+
+      <section class="contacts">
+        <h2 class="contacts__title">приглашаем к сотрудничеству дилеров!</h2>
+        <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <img src="img/map.png" alt="Карта" width="320" height="362" class="contacts__map">
+        <img src="img/point-mobile.svg" alt="Местонахождение" width="57" height="53" class="contacts__point">
+      </section>
+    </main>
+
+    <footer class="footer">
+      <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
+      <ul class="footer__list list-reset">
+        <li class="footer__item footer__item--vk">
+          <a href="https://vk.com/htmlacademy" class="footer__socials">
+            <span class="visually-hidden">вконтакте</span>
+          </a>
+        </li>
+        <li class="footer__item footer__item--instagram">
+          <a href="https://www.instagram.com/htmlacademy/" class="footer__socials">
+            <span class="visually-hidden">инстаграм</span>
+          </a>
+        </li>
+        <li class="footer__item footer__item--facebook">
+          <a href="https://www.facebook.com/htmlacademy/" class="footer__socials">
+            <span class="visually-hidden">фейсбук</span>
+          </a>
+        </li>
+      </ul>
+      <div class="footer__developed">
+        <p class="footer__text">HTML Academy</p>
+        <a href="https://htmlacademy.ru/" class="footer__link">
+          <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
