--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,14 +8,13 @@
   </head>
   <body>
     <header class="header">
-      <a href="index.html" class="header__logo">
-        <picture class="header__images">
+      <a href="index.html" class="header__link">
+        <picture>
           <source srcset="img/logo-desktop.svg" media="(min-width: 1440px)" />
           <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
-          <img src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w" sizes="" alt="Cat Energy - Функциональное питание для котов" width="33" height="38" class="header__logo">
-          <!--Я пока не до конца понимаю, как настроить sizes. Когда буду писать стили, сделаю размеры для десктопа и планшета, тогда уже буду настраивать-->
+          <img src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w" alt="Cat Energy - Функциональное питание для котов" width="33" height="38" class="header__logo">
         </picture>
-        <img src="img/logo-text.svg" alt="Cat Energy" class="header__logo-text">
+        <img src="img/logo-text.svg" alt="Cat Energy" class="header__img-text">
       </a>
       <nav class="header__navigation navigation">
         <button class="navigation__toggle">
@@ -36,12 +35,17 @@
     </header>
 
     <main class="main">
+      <h1 class="visually-hidden">Cat Energy - Функциональное питание для котов</h1>
       <section class="catalog">
-        <h1 class="catalog__title">Каталог продукции</h1>
-        <ul class="catalog__products products list-reset">
-          <li class="products__item">
-            <h3 class="products__title">Cat Energy PRO 500 г</h3>
-            <img src="img/energy-orange-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="86" class="products__img">
+        <h2 class="catalog__title">Каталог продукции</h2>
+        <ul class="catalog__list list-reset">
+          <li class="catalog__item products">
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy PRO 500 г</h3>
+            </a>
+            <a href="#" class="products__img-link">
+              <img src="img/energy-orange-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="86" class="products__img">
+            </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
                 <p class="compound__text">Масса</p>
@@ -56,12 +60,16 @@
                 <p class="compound__text">700 Р.</p>
               </li>
             </ul>
-            <button class="products__button button">Заказать</button>
+            <a href="#" class="products__button button">Заказать</a>
           </li>
 
-          <li class="products__item">
-            <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-            <img src="img/energy-orange-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
+          <li class="catalog__item products">
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy PRO 1000 г</h3>
+            </a>
+            <a href="#" class="products__img-link">
+              <img src="img/energy-orange-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
+            </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
                 <p class="compound__text">Масса</p>
@@ -76,12 +84,16 @@
                 <p class="compound__text">1000 Р.</p>
               </li>
             </ul>
-            <button class="products__button button">Заказать</button>
+            <a href="#" class="products__button button">Заказать</a>
           </li>
 
-          <li class="products__item">
-            <h3 class="products__title">Cat Energy PRO 500 г</h3>
-            <img src="img/energy-green-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="78" class="products__img">
+          <li class="catalog__item products">
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy PRO 500 г</h3>
+            </a>
+            <a href="#" class="products__img-link">
+              <img src="img/energy-green-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="78" class="products__img">
+            </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
                 <p class="compound__text">Масса</p>
@@ -96,12 +108,16 @@
                 <p class="compound__text">700 Р.</p>
               </li>
             </ul>
-            <button class="products__button button">Заказать</button>
+            <a href="#" class="products__button button">Заказать</a>
           </li>
 
-          <li class="products__item">
-            <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-            <img src="img/energy-green-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
+          <li class="catalog__item products">
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy PRO 1000 г</h3>
+            </a>
+            <a href="#" class="products__img-link">
+              <img src="img/energy-green-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
+            </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
                 <p class="compound__text">Масса</p>
@@ -116,12 +132,16 @@
                 <p class="compound__text">1000 Р.</p>
               </li>
             </ul>
-            <button class="products__button button">Заказать</button>
+            <a href="#" class="products__button button">Заказать</a>
           </li>
 
-          <li class="products__item">
-            <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-            <img src="img/energy-blue-5-mobile.png" alt="Cat Energy SLIM 500" width="68" height="78" class="products__img">
+          <li class="catalog__item products">
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy SLIM 500 г</h3>
+            </a>
+            <a href="#" class="products__img-link">
+              <img src="img/energy-blue-5-mobile" alt="Cat Energy SLIM 500" width="68" height="78" class="products__img">
+            </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
                 <p class="compound__text">Масса</p>
@@ -136,12 +156,16 @@
                 <p class="compound__text">400 Р.</p>
               </li>
             </ul>
-            <button class="products__button button">Заказать</button>
+            <a href="#" class="products__button button">Заказать</a>
           </li>
 
-          <li class="products__item">
-            <h3 class="products__title">Cat Energy SLIM 1000 г</h3>
-            <img src="img/energy-blue-10-mobile.png" alt="Cat Energy SLIM 1000" width="84" height="100" class="products__img">
+          <li class="catalog__item products">
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy SLIM 1000 г</h3>
+            </a>
+            <a href="#" class="products__img-link">
+              <img src="img/energy-blue-10-mobile.png" alt="Cat Energy SLIM 500" width="84" height="100" class="products__img">
+            </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
                 <p class="compound__text">Масса</p>
@@ -156,12 +180,16 @@
                 <p class="compound__text">700 Р.</p>
               </li>
             </ul>
-            <button class="products__button button">Заказать</button>
+            <a href="#" class="products__button button">Заказать</a>
           </li>
 
-          <li class="products__item">
-            <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-            <img src="img/energy-purple-5-mobile.png" alt="Cat Energy SLIM 500" width="72" height="84" class="products__img">
+          <li class="catalog__item products">
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy SLIM 500 г</h3>
+            </a>
+            <a href="#" class="products__img-link">
+              <img src="img/energy-purple-5-mobile.png" alt="Cat Energy SLIM 500" width="68" height="86" class="products__img">
+            </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
                 <p class="compound__text">Масса</p>
@@ -176,54 +204,54 @@
                 <p class="compound__text">500 Р.</p>
               </li>
             </ul>
-            <button class="products__button button">Заказать</button>
+            <a href="#" class="products__button button">Заказать</a>
           </li>
 
-          <li class="products__item">
+          <li class="catalog__item products products--extra">
             <h3 class="products__title">Показать еще 100500 товаров</h3>
             <p class="products__text">На самом деле вкусов гораздо больше!</p>
-            <button class="products__button products__button--gray button">показать все</button>
+            <button class="products__button button--secondary button">показать все</button>
           </li>
         </ul>
       </section>
 
       <section class="additional-items">
         <h2 class="additional-items__title">Дополнительные товары</h2>
-        <ul class="additional-items__addition addition list-reset">
-          <li class="addition__item">
+        <ul class="additional-items__unit addition list-reset">
+          <li class="additional-item__item addition">
             <h3 class="addition__title">Сахарозаменитель</h3>
             <div class="addition__compound">
               <p class="addition__text">1 упаковка (100 г)</p>
               <p class="addition__text">200 Р.</p>
             </div>
-            <button class="addition__button button">Заказать</button>
+            <a href="#" class="addition__button button">Заказать</a>
           </li>
 
-          <li class="addition__item">
+          <li class="additional-item__item addition">
             <h3 class="addition__title">питьевая вода</h3>
             <div class="addition__compound">
               <p class="addition__text">5 литров</p>
               <p class="addition__text">50 Р.</p>
             </div>
-            <button class="addition__button button">Заказать</button>
+            <a href="#" class="addition__button button">Заказать</a>
           </li>
 
-          <li class="addition__item">
+          <li class="additional-item__item addition">
             <h3 class="addition__title">Молок</h3>
             <div class="addition__compound">
               <p class="addition__text">1 литр</p>
               <p class="addition__text">100 Р.</p>
             </div>
-            <button class="addition__button button">Заказать</button>
+            <a href="#" class="addition__button button">Заказать</a>
           </li>
 
-          <li class="addition__item">
+          <li class="additional-item__item addition">
             <h3 class="addition__title">Витамины</h3>
             <div class="addition__compound">
               <p class="addition__text">1 упаковка (30 г)</p>
               <p class="addition__text">300 Р.</p>
             </div>
-            <button class="addition__button button">Заказать</button>
+            <a href="#" class="addition__button button">Заказать</a>
           </li>
         </ul>
 
@@ -232,45 +260,39 @@
         </div>
       </section>
 
-
-
-
-
-
-
-
-
-
       <section class="contacts">
-        <h2 class="contacts__title">приглашаем к сотрудничеству дилеров!</h2>
-        <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        <img src="img/map.png" alt="Карта" width="320" height="362" class="contacts__map">
-        <img src="img/point-mobile.svg" alt="Местонахождение" width="57" height="53" class="contacts__point">
+        <div class="contacts__adress adress">
+          <h2 class="adress__title">приглашаем к сотрудничеству дилеров!</h2>
+          <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <div class="contacts__map map">
+          <img src="img/map.png" alt="Карта" width="320" height="362" class="map__img">
+        </div>
       </section>
     </main>
 
     <footer class="footer">
       <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
-      <ul class="footer__list list-reset">
-        <li class="footer__item footer__item--vk">
-          <a href="https://vk.com/htmlacademy" class="footer__socials">
+      <ul class="footer__socials list-reset">
+        <li class="socials__item socials--vk">
+          <a href="https://vk.com/htmlacademy" class="socials__socials">
             <span class="visually-hidden">вконтакте</span>
           </a>
         </li>
-        <li class="footer__item footer__item--instagram">
-          <a href="https://www.instagram.com/htmlacademy/" class="footer__socials">
+        <li class="socials__item socials--in">
+          <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
             <span class="visually-hidden">инстаграм</span>
           </a>
         </li>
-        <li class="footer__item footer__item--facebook">
-          <a href="https://www.facebook.com/htmlacademy/" class="footer__socials">
+        <li class="socials__item socials--fc">
+          <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
             <span class="visually-hidden">фейсбук</span>
           </a>
         </li>
       </ul>
       <div class="footer__developed">
         <p class="footer__text">HTML Academy</p>
-        <a href="https://htmlacademy.ru/" class="footer__link">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
           <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
         </a>
       </div>
