--- a/source/index.html
+++ b/source/index.html
@@ -7,14 +7,13 @@
   </head>
   <body>
     <header class="header">
-      <a href="index.html" class="header__logo">
-        <picture class="header__images">
+      <a href="index.html" class="header__link">
+        <picture>
           <source srcset="img/logo-desktop.svg" media="(min-width: 1440px)" />
           <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
-          <img src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w" sizes="" alt="Cat Energy - Функциональное питание для котов" width="33" height="38" class="header__logo">
-          <!--Я пока не до конца понимаю, как настроить sizes. Когда буду писать стили, сделаю размеры для десктопа и планшета, тогда уже буду настраивать-->
+          <img src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w" alt="Cat Energy - Функциональное питание для котов" width="33" height="38" class="header__logo">
         </picture>
-        <img src="img/logo-text.svg" alt="Cat Energy" class="header__logo-text">
+        <img src="img/logo-text.svg" alt="Cat Energy" class="header__img-text">
       </a>
       <nav class="header__navigation navigation">
         <button class="navigation__toggle">
@@ -35,18 +34,19 @@
     </header>
 
     <main class="main">
+      <h1 class="visually-hidden">Cat Energy - Функциональное питание для котов</h1>
       <section class="greetings">
-        <h1 class="greetings__title">Функциональное питание для котов</h1>
-        <h2 class="greetings__subtitle">Занялся собой? Займись котом!</h2>
+        <h2 class="greetings__title">Функциональное питание для котов</h1>
+        <p class="greetings__slogan">Занялся собой? Займись котом!</p>
         <img src="img/index-can-mobile.svg" alt="" width="280" height="270" class="greetings__banner">
-        <button class="greetings__button button">Подобрать программу</button>
+        <a href="form.html" class="greetings__link button">Подобрать программу</a>
       </section>
 
       <section class="for-what">
         <ul class="for-what__list list-reset">
           <li class="for-what__item">
             <div class="for-what__cat for-what__cat--slim"></div>
-            <h3 class="for-what__title">Похудение</h3> <!--TODO Проверь пожалуйста, правильно ли поставил Х-->
+            <h3 class="for-what__title">Похудение</h3>
             <p class="for-what__text">
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
               Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
@@ -77,10 +77,10 @@
 
       <section class="example">
         <h2 class="example__title">Живой пример</h2>
-        <P class="example__subtitle">
+        <p class="example__subtitle">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
           Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </P>
+        </p>
         <div class="example__box">
           <div class="example__bold">5 кг</div>
           <p class="example__thin">снижение веса</p>
@@ -89,45 +89,55 @@
           <div class="example__bold">60 дней</div>
           <p class="example__thin">затрачено времени</p>
         </div>
-        <P class="example__total">Затраты на питание: 15 000 РУБ. </P>
-        <img src="img/before-mobile.jpg" alt="Кот до диеты" width="280" height="232" class="example__img">
-        <div class="example__range">
-          <span class="example__span">Было</span>
-          <input type="range" class="example__input">
-          <span class="example__span">Стало</span>
+        <p class="example__total">Затраты на питание: 15 000 РУБ. </p>
+        <div class="example__slider slider">
+          <div class="slider__preview">
+            <img src="img/before-mobile.jpg" alt="Кот до диеты" width="280" height="232" class="example__img">
+            <img src="img/after.jpg" alt="Кот после диеты" width="280" height="232" class="example__img">
+          </div>
+          <div class="slider__controls range">
+            <button type="button" class="range__button button">Было</button>
+            <div class="range__scale">
+              <div class="range__bar"></div>
+            </div>
+            <button type="button" class="range__button button">Стало</button>
+          </div>
         </div>
       </section>
 
       <section class="contacts">
-        <h2 class="contacts__title">приглашаем к сотрудничеству дилеров!</h2>
-        <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        <img src="img/map.png" alt="Карта" width="320" height="362" class="contacts__map">
-        <img src="img/point-mobile.svg" alt="Местонахождение" width="57" height="53" class="contacts__point">
+        <div class="contacts__adress adress">
+          <h2 class="adress__title">приглашаем к сотрудничеству дилеров!</h2>
+          <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <div class="contacts__map map">
+          <img src="img/map.png" alt="Карта" width="320" height="362" class="map__img">
+        </div>
       </section>
     </main>
 
     <footer class="footer">
       <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
-      <ul class="footer__list list-reset">
-        <li class="footer__item footer__item--vk">
-          <a href="https://vk.com/htmlacademy" class="footer__socials">
+      <ul class="footer__socials list-reset">
+        <li class="socials__item socials--vk">
+          <a href="https://vk.com/htmlacademy" class="socials__socials">
             <span class="visually-hidden">вконтакте</span>
           </a>
         </li>
-        <li class="footer__item footer__item--instagram">
-          <a href="https://www.instagram.com/htmlacademy/" class="footer__socials">
+        <li class="socials__item socials--in">
+          <a href="https://www.instagram.com/htmlacademy/" class="socials__socials">
             <span class="visually-hidden">инстаграм</span>
           </a>
         </li>
-        <li class="footer__item footer__item--facebook">
-          <a href="https://www.facebook.com/htmlacademy/" class="footer__socials">
+        <li class="socials__item socials--fc">
+          <a href="https://www.facebook.com/htmlacademy/" class="socials__socials">
             <span class="visually-hidden">фейсбук</span>
           </a>
         </li>
       </ul>
       <div class="footer__developed">
         <p class="footer__text">HTML Academy</p>
-        <a href="https://htmlacademy.ru/" class="footer__link">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__link">
           <img src="img/html-icon-mobile.svg" alt="html Academy" width="27" height="34" class="footer__icon">
         </a>
       </div>
