--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Energy каталог</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <a href="index.html" class="header__link">
         <picture>
@@ -140,7 +141,7 @@
               <h3 class="products__title">Cat Energy SLIM 500 г</h3>
             </a>
             <a href="#" class="products__img-link">
-              <img src="img/energy-blue-5-mobile" alt="Cat Energy SLIM 500" width="68" height="78" class="products__img">
+              <img src="img/energy-blue-5-mobile.png" alt="Cat Energy SLIM 500" width="68" height="78" class="products__img">
             </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
