--- a/source/index.html
+++ b/source/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <a href="index.html" class="header__link">
         <picture>
