--- a/source/index.html
+++ b/source/index.html
@@ -94,7 +94,7 @@
         <div class="example__slider slider">
           <div class="slider__preview">
             <img src="img/before-mobile.jpg" alt="Кот до диеты" width="280" height="232" class="example__img">
-            <img src="img/after.jpg" alt="Кот после диеты" width="280" height="232" class="example__img">
+            <img src="img/after.jpg" alt="Кот после диеты" width="280" height="232" class="example__img visually-hidden">
           </div>
           <div class="slider__controls range">
             <button type="button" class="range__button button">Было</button>
