--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
         <img src="img/logo-text.svg" alt="Cat Energy" class="header__img-text">
       </a>
       <nav class="header__navigation navigation">
-        <button class="navigation__toggle">
+        <button class="navigation__toggle button">
           <span class="visually-hidden">Открыть / Закрыть меню</span>
         </button>
         <ul class="navigation__list list-reset">
@@ -108,7 +108,7 @@
 
       <section class="contacts">
         <div class="contacts__adress adress">
-          <h2 class="adress__title">приглашаем к сотрудничеству дилеров!</h2>
+          <h2 class="adress__title">Приглашаем к сотрудничеству дилеров!</h2>
           <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <div class="contacts__map map">
@@ -119,7 +119,7 @@
 
     <footer class="footer">
       <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
-      <ul class="footer__socials list-reset">
+      <ul class="footer__socials socials list-reset">
         <li class="socials__item socials--vk">
           <a href="https://vk.com/htmlacademy" class="socials__socials">
             <span class="visually-hidden">вконтакте</span>
