--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,59 +41,59 @@
         <h2 class="catalog__title">Каталог продукции</h2>
         <ul class="catalog__list list-reset">
           <li class="catalog__item products">
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy PRO 500 г</h3>
-            </a>
             <a href="#" class="products__img-link">
               <img src="img/energy-orange-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="86" class="products__img">
             </a>
-            <ul class="products__compound compound list-reset">
-              <li class="compound__item">
-                <p class="compound__text">Масса</p>
-                <p class="compound__text">500 г.</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Вкус</p>
-                <p class="compound__text">Курица</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Цена</p>
-                <p class="compound__text">700 Р.</p>
-              </li>
-            </ul>
-            <a href="#" class="products__button button">Заказать</a>
-          </li>
-
-          <li class="catalog__item products">
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-            </a>
-            <a href="#" class="products__img-link">
-              <img src="img/energy-orange-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
-            </a>
-            <ul class="products__compound compound list-reset">
-              <li class="compound__item">
-                <p class="compound__text">Масса</p>
-                <p class="compound__text">1000 г.</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Вкус</p>
-                <p class="compound__text">Курица</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Цена</p>
-                <p class="compound__text">1000 Р.</p>
-              </li>
-            </ul>
-            <a href="#" class="products__button button">Заказать</a>
-          </li>
-
-          <li class="catalog__item products">
             <a href="#" class="products__main-link">
               <h3 class="products__title">Cat Energy PRO 500 г</h3>
             </a>
+            <ul class="products__compound compound list-reset">
+              <li class="compound__item">
+                <p class="compound__text">Масса</p>
+                <p class="compound__text">500 г.</p>
+              </li>
+              <li class="compound__item">
+                <p class="compound__text">Вкус</p>
+                <p class="compound__text">Курица</p>
+              </li>
+              <li class="compound__item">
+                <p class="compound__text">Цена</p>
+                <p class="compound__text">700 Р.</p>
+              </li>
+            </ul>
+            <a href="#" class="products__button button">Заказать</a>
+          </li>
+
+          <li class="catalog__item products">
+            <a href="#" class="products__img-link">
+              <img src="img/energy-orange-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
+            </a>
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy PRO 1000 г</h3>
+            </a>
+            <ul class="products__compound compound list-reset">
+              <li class="compound__item">
+                <p class="compound__text">Масса</p>
+                <p class="compound__text">1000 г.</p>
+              </li>
+              <li class="compound__item">
+                <p class="compound__text">Вкус</p>
+                <p class="compound__text">Курица</p>
+              </li>
+              <li class="compound__item">
+                <p class="compound__text">Цена</p>
+                <p class="compound__text">1000 Р.</p>
+              </li>
+            </ul>
+            <a href="#" class="products__button button">Заказать</a>
+          </li>
+
+          <li class="catalog__item products">
             <a href="#" class="products__img-link">
               <img src="img/energy-green-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="78" class="products__img">
+            </a>
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy PRO 500 г</h3>
             </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
@@ -113,11 +113,11 @@
           </li>
 
           <li class="catalog__item products">
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-            </a>
             <a href="#" class="products__img-link">
               <img src="img/energy-green-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
+            </a>
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy PRO 1000 г</h3>
             </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
@@ -137,11 +137,11 @@
           </li>
 
           <li class="catalog__item products">
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-            </a>
             <a href="#" class="products__img-link">
               <img src="img/energy-blue-5-mobile.png" alt="Cat Energy SLIM 500" width="68" height="78" class="products__img">
+            </a>
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy SLIM 500 г</h3>
             </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
@@ -161,11 +161,11 @@
           </li>
 
           <li class="catalog__item products">
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy SLIM 1000 г</h3>
-            </a>
             <a href="#" class="products__img-link">
               <img src="img/energy-blue-10-mobile.png" alt="Cat Energy SLIM 500" width="84" height="100" class="products__img">
+            </a>
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy SLIM 1000 г</h3>
             </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
@@ -185,11 +185,11 @@
           </li>
 
           <li class="catalog__item products">
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-            </a>
             <a href="#" class="products__img-link">
               <img src="img/energy-purple-5-mobile.png" alt="Cat Energy SLIM 500" width="68" height="86" class="products__img">
+            </a>
+            <a href="#" class="products__main-link">
+              <h3 class="products__title">Cat Energy SLIM 500 г</h3>
             </a>
             <ul class="products__compound compound list-reset">
               <li class="compound__item">
@@ -218,7 +218,7 @@
 
       <section class="additional-items">
         <h2 class="additional-items__title">Дополнительные товары</h2>
-        <ul class="additional-items__unit addition list-reset">
+        <ul class="additional-items__unit list-reset">
           <li class="additional-item__item addition">
             <h3 class="addition__title">Сахарозаменитель</h3>
             <div class="addition__compound">
