--- a/source/index.html
+++ b/source/index.html
@@ -14,6 +14,8 @@
           <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
           <img src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w" alt="Cat Energy - Функциональное питание для котов" width="33" height="38" class="header__logo">
         </picture>
+      </a>
+      <a href="index.html" class="header__link">
         <img src="img/logo-text.svg" alt="Cat Energy" class="header__img-text">
       </a>
       <nav class="header__navigation navigation">
@@ -78,19 +80,23 @@
 
       <section class="example">
         <h2 class="example__title">Живой пример</h2>
-        <p class="example__subtitle">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-          Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <div class="example__box">
-          <div class="example__bold">5 кг</div>
-          <p class="example__thin">снижение веса</p>
+
+        <div class="example__description description">
+          <p class="description__subtitle">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+            Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <div class="description__box">
+            <div class="description__bold">5 кг</div>
+            <p class="description__thin">снижение веса</p>
+          </div>
+          <div class="description__box">
+            <div class="description__bold">60 дней</div>
+            <p class="description__thin">затрачено времени</p>
+          </div>
+          <p class="description__total">Затраты на питание: 15 000 РУБ.</p>
         </div>
-        <div class="example__box">
-          <div class="example__bold">60 дней</div>
-          <p class="example__thin">затрачено времени</p>
-        </div>
-        <p class="example__total">Затраты на питание: 15 000 РУБ. </p>
+        
         <div class="example__slider slider">
           <div class="slider__preview">
             <img src="img/before-mobile.jpg" alt="Кот до диеты" width="280" height="232" class="example__img">
