Сделал правки и переделал индекс

--- a/source/form.html
+++ b/source/form.html
@@ -102,10 +102,9 @@
               id="habits"
               cols="30"
               rows="10"
-              disabled
               placeholder="Расскажите обо всех повадках кота"
-              class="text-field__input text-field__input--textarea">
-            </textarea><!--TODO Почему placeholder и disabled не работают?-->
+              class="text-field__input text-field__input--textarea"
+            ></textarea>
           </fieldset>
 
           <fieldset class="form__group">
