--- a/source/index.html
+++ b/source/index.html
@@ -38,76 +38,85 @@
 
     <main class="main">
       <h1 class="visually-hidden">Cat Energy - Функциональное питание для котов</h1>
+
       <section class="greetings">
-        <h2 class="greetings__title">Функциональное питание для котов</h1>
-        <p class="greetings__slogan">Занялся собой? Займись котом!</p>
-        <img src="img/index-can-mobile.svg" alt="" width="280" height="270" class="greetings__banner">
-        <a href="form.html" class="greetings__link button">Подобрать программу</a>
+        <div class="conteiner">
+          <h2 class="greetings__title">Функциональное питание для котов</h1>
+          <p class="greetings__slogan">Занялся собой? Займись котом!</p>
+          <img src="img/index-can-mobile.svg" alt="" width="280" height="270" class="greetings__banner">
+          <a href="form.html" class="greetings__link button">Подобрать программу</a>
+        </div>
       </section>
 
       <section class="for-what">
-        <ul class="for-what__list list-reset">
-          <li class="for-what__item">
-            <div class="for-what__cat for-what__cat--slim"></div>
-            <h3 class="for-what__title">Похудение</h3>
-            <p class="for-what__text">
-              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-            </p>
-            <a href="#" class="for-what__link">Каталог slim</a>
-          </li>
-          <li class="for-what__item">
-            <div class="for-what__cat for-what__cat--fat"></div>
-            <h3 class="for-what__title">Набор массы</h3>
-            <p class="for-what__text">
-              Заработать авторитет среди дворовых котов и даже собак?
-              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-            </p>
-            <a href="#" class="for-what__link">Каталог pro</a>
-          </li>
-        </ul>
+        <div class="conteiner">
+          <ul class="for-what__list list-reset">
+            <li class="for-what__item">
+              <div class="for-what__cat for-what__cat--slim"></div>
+              <h3 class="for-what__title">Похудение</h3>
+              <p class="for-what__text">
+                Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+                Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+              </p>
+              <a href="#" class="for-what__link">Каталог slim</a>
+            </li>
+            <li class="for-what__item">
+              <div class="for-what__cat for-what__cat--fat"></div>
+              <h3 class="for-what__title">Набор массы</h3>
+              <p class="for-what__text">
+                Заработать авторитет среди дворовых котов и даже собак?
+                Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+              </p>
+              <a href="#" class="for-what__link">Каталог pro</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="work">
-        <h2 class="work__title">Как это работает</h2>
-        <ul class="work__list list-reset">
-          <li class="work__item">Функциональное питание содержит только полезные питательные вещества.</li>
-          <li class="work__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-          <li class="work__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
-          <li class="work__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
-        </ul>
+        <div class="conteiner">
+          <h2 class="work__title">Как это работает</h2>
+          <ul class="work__list list-reset">
+            <li class="work__item">Функциональное питание содержит только полезные питательные вещества.</li>
+            <li class="work__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+            <li class="work__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
+            <li class="work__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+          </ul>
+        </div>
       </section>
 
       <section class="example">
-        <h2 class="example__title">Живой пример</h2>
+        <div class="conteiner">
+          <h2 class="example__title">Живой пример</h2>
 
-        <div class="example__description description">
-          <p class="description__subtitle">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-            Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-          </p>
-          <div class="description__box">
-            <div class="description__bold">5 кг</div>
-            <p class="description__thin">снижение веса</p>
-          </div>
-          <div class="description__box">
-            <div class="description__bold">60 дней</div>
-            <p class="description__thin">затрачено времени</p>
-          </div>
-          <p class="description__total">Затраты на питание: 15 000 РУБ.</p>
-        </div>
-        
-        <div class="example__slider slider">
-          <div class="slider__preview">
-            <img src="img/before-mobile.jpg" alt="Кот до диеты" width="280" height="232" class="example__img">
-            <img src="img/after.jpg" alt="Кот после диеты" width="280" height="232" class="example__img visually-hidden">
-          </div>
-          <div class="slider__controls range">
-            <button type="button" class="range__button button">Было</button>
-            <div class="range__scale">
-              <div class="range__bar"></div>
+          <div class="example__description description">
+            <p class="description__subtitle">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+              Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <div class="description__box">
+              <div class="description__bold">5 кг</div>
+              <p class="description__thin">снижение веса</p>
             </div>
-            <button type="button" class="range__button button">Стало</button>
+            <div class="description__box">
+              <div class="description__bold">60 дней</div>
+              <p class="description__thin">затрачено времени</p>
+            </div>
+            <p class="description__total">Затраты на питание: 15 000 РУБ.</p>
+          </div>
+
+          <div class="example__slider slider">
+            <div class="slider__preview">
+              <img src="img/before-mobile.jpg" alt="Кот до диеты" width="280" height="232" class="example__img">
+              <img src="img/after.jpg" alt="Кот после диеты" width="280" height="232" class="example__img visually-hidden">
+            </div>
+            <div class="slider__controls range">
+              <button type="button" class="range__button button">Было</button>
+              <div class="range__scale">
+                <div class="range__bar"></div>
+              </div>
+              <button type="button" class="range__button button">Стало</button>
+            </div>
           </div>
         </div>
       </section>
@@ -123,8 +132,11 @@
       </section>
     </main>
 
+
     <footer class="footer">
-      <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
+      <a href="index.html" class="footer__logo-link">
+        <img src="img/footer-logo.svg" alt="Cat Energy" width="128" height="24" class="footer__logo-text">
+      </a>
       <ul class="footer__socials socials list-reset">
         <li class="socials__item socials--vk">
           <a href="https://vk.com/htmlacademy" class="socials__socials">
