Индекс сетка фулл

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,183 +37,186 @@
 
     <main class="main">
       <h1 class="visually-hidden">Cat Energy - Функциональное питание для котов</h1>
+
       <section class="catalog">
-        <h2 class="catalog__title">Каталог продукции</h2>
-        <ul class="catalog__list list-reset">
-          <li class="catalog__item products">
-            <a href="#" class="products__img-link">
-              <img src="img/energy-orange-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="86" class="products__img">
-            </a>
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy PRO 500 г</h3>
-            </a>
-            <ul class="products__compound compound list-reset">
-              <li class="compound__item">
-                <p class="compound__text">Масса</p>
-                <p class="compound__text">500 г.</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Вкус</p>
-                <p class="compound__text">Курица</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Цена</p>
-                <p class="compound__text">700 Р.</p>
-              </li>
-            </ul>
-            <a href="#" class="products__button button">Заказать</a>
-          </li>
+        <div class="conteiner">
+          <h2 class="catalog__title">Каталог продукции</h2>
+          <ul class="catalog__list list-reset">
+            <li class="catalog__item products">
+              <a href="#" class="products__img-link">
+                <img src="img/energy-orange-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="86" class="products__img">
+              </a>
+              <a href="#" class="products__main-link">
+                <h3 class="products__title">Cat Energy PRO 500 г</h3>
+              </a>
+              <ul class="products__compound compound list-reset">
+                <li class="compound__item">
+                  <p class="compound__text">Масса</p>
+                  <p class="compound__text">500 г.</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Вкус</p>
+                  <p class="compound__text">Курица</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Цена</p>
+                  <p class="compound__text">700 Р.</p>
+                </li>
+              </ul>
+              <a href="#" class="products__button button">Заказать</a>
+            </li>
 
-          <li class="catalog__item products">
-            <a href="#" class="products__img-link">
-              <img src="img/energy-orange-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
-            </a>
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-            </a>
-            <ul class="products__compound compound list-reset">
-              <li class="compound__item">
-                <p class="compound__text">Масса</p>
-                <p class="compound__text">1000 г.</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Вкус</p>
-                <p class="compound__text">Курица</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Цена</p>
-                <p class="compound__text">1000 Р.</p>
-              </li>
-            </ul>
-            <a href="#" class="products__button button">Заказать</a>
-          </li>
+            <li class="catalog__item products">
+              <a href="#" class="products__img-link">
+                <img src="img/energy-orange-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
+              </a>
+              <a href="#" class="products__main-link">
+                <h3 class="products__title">Cat Energy PRO 1000 г</h3>
+              </a>
+              <ul class="products__compound compound list-reset">
+                <li class="compound__item">
+                  <p class="compound__text">Масса</p>
+                  <p class="compound__text">1000 г.</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Вкус</p>
+                  <p class="compound__text">Курица</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Цена</p>
+                  <p class="compound__text">1000 Р.</p>
+                </li>
+              </ul>
+              <a href="#" class="products__button button">Заказать</a>
+            </li>
 
-          <li class="catalog__item products">
-            <a href="#" class="products__img-link">
-              <img src="img/energy-green-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="78" class="products__img">
-            </a>
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy PRO 500 г</h3>
-            </a>
-            <ul class="products__compound compound list-reset">
-              <li class="compound__item">
-                <p class="compound__text">Масса</p>
-                <p class="compound__text">500 г.</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Вкус</p>
-                <p class="compound__text">Рыба</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Цена</p>
-                <p class="compound__text">700 Р.</p>
-              </li>
-            </ul>
-            <a href="#" class="products__button button">Заказать</a>
-          </li>
+            <li class="catalog__item products">
+              <a href="#" class="products__img-link">
+                <img src="img/energy-green-5-mobile.png" alt="Cat Energy PRO 500" width="68" height="78" class="products__img">
+              </a>
+              <a href="#" class="products__main-link">
+                <h3 class="products__title">Cat Energy PRO 500 г</h3>
+              </a>
+              <ul class="products__compound compound list-reset">
+                <li class="compound__item">
+                  <p class="compound__text">Масса</p>
+                  <p class="compound__text">500 г.</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Вкус</p>
+                  <p class="compound__text">Рыба</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Цена</p>
+                  <p class="compound__text">700 Р.</p>
+                </li>
+              </ul>
+              <a href="#" class="products__button button">Заказать</a>
+            </li>
 
-          <li class="catalog__item products">
-            <a href="#" class="products__img-link">
-              <img src="img/energy-green-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
-            </a>
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-            </a>
-            <ul class="products__compound compound list-reset">
-              <li class="compound__item">
-                <p class="compound__text">Масса</p>
-                <p class="compound__text">1000 г.</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Вкус</p>
-                <p class="compound__text">Рыба</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Цена</p>
-                <p class="compound__text">1000 Р.</p>
-              </li>
-            </ul>
-            <a href="#" class="products__button button">Заказать</a>
-          </li>
+            <li class="catalog__item products">
+              <a href="#" class="products__img-link">
+                <img src="img/energy-green-10-mobile.png" alt="Cat Energy PRO 1000" width="84" height="100" class="products__img">
+              </a>
+              <a href="#" class="products__main-link">
+                <h3 class="products__title">Cat Energy PRO 1000 г</h3>
+              </a>
+              <ul class="products__compound compound list-reset">
+                <li class="compound__item">
+                  <p class="compound__text">Масса</p>
+                  <p class="compound__text">1000 г.</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Вкус</p>
+                  <p class="compound__text">Рыба</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Цена</p>
+                  <p class="compound__text">1000 Р.</p>
+                </li>
+              </ul>
+              <a href="#" class="products__button button">Заказать</a>
+            </li>
 
-          <li class="catalog__item products">
-            <a href="#" class="products__img-link">
-              <img src="img/energy-blue-5-mobile.png" alt="Cat Energy SLIM 500" width="68" height="78" class="products__img">
-            </a>
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-            </a>
-            <ul class="products__compound compound list-reset">
-              <li class="compound__item">
-                <p class="compound__text">Масса</p>
-                <p class="compound__text">500 г.</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Вкус</p>
-                <p class="compound__text">Гречка</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Цена</p>
-                <p class="compound__text">400 Р.</p>
-              </li>
-            </ul>
-            <a href="#" class="products__button button">Заказать</a>
-          </li>
+            <li class="catalog__item products">
+              <a href="#" class="products__img-link">
+                <img src="img/energy-blue-5-mobile.png" alt="Cat Energy SLIM 500" width="68" height="78" class="products__img">
+              </a>
+              <a href="#" class="products__main-link">
+                <h3 class="products__title">Cat Energy SLIM 500 г</h3>
+              </a>
+              <ul class="products__compound compound list-reset">
+                <li class="compound__item">
+                  <p class="compound__text">Масса</p>
+                  <p class="compound__text">500 г.</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Вкус</p>
+                  <p class="compound__text">Гречка</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Цена</p>
+                  <p class="compound__text">400 Р.</p>
+                </li>
+              </ul>
+              <a href="#" class="products__button button">Заказать</a>
+            </li>
 
-          <li class="catalog__item products">
-            <a href="#" class="products__img-link">
-              <img src="img/energy-blue-10-mobile.png" alt="Cat Energy SLIM 500" width="84" height="100" class="products__img">
-            </a>
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy SLIM 1000 г</h3>
-            </a>
-            <ul class="products__compound compound list-reset">
-              <li class="compound__item">
-                <p class="compound__text">Масса</p>
-                <p class="compound__text">1000 г.</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Вкус</p>
-                <p class="compound__text">Гречка</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Цена</p>
-                <p class="compound__text">700 Р.</p>
-              </li>
-            </ul>
-            <a href="#" class="products__button button">Заказать</a>
-          </li>
+            <li class="catalog__item products">
+              <a href="#" class="products__img-link">
+                <img src="img/energy-blue-10-mobile.png" alt="Cat Energy SLIM 500" width="84" height="100" class="products__img">
+              </a>
+              <a href="#" class="products__main-link">
+                <h3 class="products__title">Cat Energy SLIM 1000 г</h3>
+              </a>
+              <ul class="products__compound compound list-reset">
+                <li class="compound__item">
+                  <p class="compound__text">Масса</p>
+                  <p class="compound__text">1000 г.</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Вкус</p>
+                  <p class="compound__text">Гречка</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Цена</p>
+                  <p class="compound__text">700 Р.</p>
+                </li>
+              </ul>
+              <a href="#" class="products__button button">Заказать</a>
+            </li>
 
-          <li class="catalog__item products">
-            <a href="#" class="products__img-link">
-              <img src="img/energy-purple-5-mobile.png" alt="Cat Energy SLIM 500" width="68" height="86" class="products__img">
-            </a>
-            <a href="#" class="products__main-link">
-              <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-            </a>
-            <ul class="products__compound compound list-reset">
-              <li class="compound__item">
-                <p class="compound__text">Масса</p>
-                <p class="compound__text">500 г.</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Вкус</p>
-                <p class="compound__text">Рис</p>
-              </li>
-              <li class="compound__item">
-                <p class="compound__text">Цена</p>
-                <p class="compound__text">500 Р.</p>
-              </li>
-            </ul>
-            <a href="#" class="products__button button">Заказать</a>
-          </li>
+            <li class="catalog__item products">
+              <a href="#" class="products__img-link">
+                <img src="img/energy-purple-5-mobile.png" alt="Cat Energy SLIM 500" width="68" height="86" class="products__img">
+              </a>
+              <a href="#" class="products__main-link">
+                <h3 class="products__title">Cat Energy SLIM 500 г</h3>
+              </a>
+              <ul class="products__compound compound list-reset">
+                <li class="compound__item">
+                  <p class="compound__text">Масса</p>
+                  <p class="compound__text">500 г.</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Вкус</p>
+                  <p class="compound__text">Рис</p>
+                </li>
+                <li class="compound__item">
+                  <p class="compound__text">Цена</p>
+                  <p class="compound__text">500 Р.</p>
+                </li>
+              </ul>
+              <a href="#" class="products__button button">Заказать</a>
+            </li>
 
-          <li class="catalog__item products products--extra">
-            <h3 class="products__title">Показать еще 100500 товаров</h3>
-            <p class="products__text">На самом деле вкусов гораздо больше!</p>
-            <button class="products__button button--secondary button">показать все</button>
-          </li>
-        </ul>
+            <li class="catalog__item products products--extra">
+              <h3 class="products__title">Показать еще 100500 товаров</h3>
+              <p class="products__text">На самом деле вкусов гораздо больше!</p>
+              <button class="products__button button--secondary button">показать все</button>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="additional-items">
